test-suite/tests/ui/designated/missing_designated_parameter_no_parameters.stderr
error: expected a designated parameter
 --> tests/ui/designated/missing_designated_parameter_no_parameters.rs:4:5
  |
4 | pub struct Test;
  |     ^^^^^^

error: expected a designated parameter
 --> tests/ui/designated/missing_designated_parameter_no_parameters.rs:7:1
  |
7 | impl Test {}
  | ^^^^
