test-suite/tests/ui/designated/missing_designated_parameter_no_parameters.rs
use stated::stated;

#[stated(states(A))]
pub struct Test;

#[stated]
impl Test {}

fn main() {}
